--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -18,6 +18,15 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="src\1. Tow Sum.md" />
+    <None Include="src\11. Container With Most Water.md" />
+    <None Include="src\2. Add Two Numbers.md" />
+    <None Include="src\202. Happy Number.md" />
+    <None Include="src\206. Reverse Linked List.md" />
+    <None Include="src\21. Merge Two Sorted Lists.md" />
+    <None Include="src\3. Longest Substring Without Repeating Characters.md" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A480C318-FC5B-4DBB-AB51-10A976083CFD}</ProjectGuid>
     <RootNamespace>LeetCode</RootNamespace>
@@ -109,8 +118,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
