--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -36,5 +36,6 @@
     <None Include="src\231. Power of Two.md" />
     <None Include="src\112. Path Sum.md" />
     <None Include="src\623. Add One Row to Tree.md" />
+    <None Include="src\653. Two Sum IV - Input is a BST.md" />
   </ItemGroup>
 </Project>
