334. Increasing Triplet Subsequence

--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -37,5 +37,6 @@
     <None Include="src\112. Path Sum.md" />
     <None Include="src\623. Add One Row to Tree.md" />
     <None Include="src\653. Two Sum IV - Input is a BST.md" />
+    <None Include="src\334. Increasing Triplet Subsequence.md" />
   </ItemGroup>
 </Project>
