--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -38,5 +38,6 @@
     <None Include="src\623. Add One Row to Tree.md" />
     <None Include="src\653. Two Sum IV - Input is a BST.md" />
     <None Include="src\334. Increasing Triplet Subsequence.md" />
+    <None Include="src\976. Largest Perimeter Triangle.md" />
   </ItemGroup>
 </Project>
