--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -28,6 +28,7 @@
     <None Include="src\206. Reverse Linked List.md" />
     <None Include="src\21. Merge Two Sorted Lists.md" />
     <None Include="src\231. Power of Two.md" />
+    <None Include="src\237. Delete Node in a Linked List.md" />
     <None Include="src\3. Longest Substring Without Repeating Characters.md" />
     <None Include="src\334. Increasing Triplet Subsequence.md" />
     <None Include="src\623. Add One Row to Tree.md" />
