--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -39,5 +39,6 @@
     <None Include="src\653. Two Sum IV - Input is a BST.md" />
     <None Include="src\334. Increasing Triplet Subsequence.md" />
     <None Include="src\976. Largest Perimeter Triangle.md" />
+    <None Include="src\237. Delete Node in a Linked List.md" />
   </ItemGroup>
 </Project>
