--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -40,5 +40,6 @@
     <None Include="src\334. Increasing Triplet Subsequence.md" />
     <None Include="src\976. Largest Perimeter Triangle.md" />
     <None Include="src\237. Delete Node in a Linked List.md" />
+    <None Include="src\2095. Delete the Middle Node of a Linked List.md" />
   </ItemGroup>
 </Project>
