--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -33,6 +33,7 @@
     <None Include="src\237. Delete Node in a Linked List.md" />
     <None Include="src\3. Longest Substring Without Repeating Characters.md" />
     <None Include="src\334. Increasing Triplet Subsequence.md" />
+    <None Include="src\38. Count and Say.md" />
     <None Include="src\623. Add One Row to Tree.md" />
     <None Include="src\653. Two Sum IV - Input is a BST.md" />
     <None Include="src\976. Largest Perimeter Triangle.md" />
