--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -42,5 +42,6 @@
     <None Include="src\237. Delete Node in a Linked List.md" />
     <None Include="src\2095. Delete the Middle Node of a Linked List.md" />
     <None Include="src\1832. Check if the Sentence Is Pangram.md" />
+    <None Include="src\38. Count and Say.md" />
   </ItemGroup>
 </Project>
