--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -46,5 +46,6 @@
     <None Include="src\692. Top K Frequent Words.md" />
     <None Include="src\12. Integer to Roman.md" />
     <None Include="src\766. Toeplitz Matrix.md" />
+    <None Include="src\345. Reverse Vowels of a String.md" />
   </ItemGroup>
 </Project>
