--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -23,6 +23,7 @@
     <None Include="src\11. Container With Most Water.md" />
     <None Include="src\112. Path Sum.md" />
     <None Include="src\12. Integer to Roman.md" />
+    <None Include="src\1323. Maximum 69 Number.md" />
     <None Include="src\1832. Check if the Sentence Is Pangram.md" />
     <None Include="src\19. Remove Nth Node From End of List.md" />
     <None Include="src\2. Add Two Numbers.md" />
