--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -47,5 +47,6 @@
     <None Include="src\12. Integer to Roman.md" />
     <None Include="src\766. Toeplitz Matrix.md" />
     <None Include="src\345. Reverse Vowels of a String.md" />
+    <None Include="src\1323. Maximum 69 Number.md" />
   </ItemGroup>
 </Project>
