--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -48,5 +48,6 @@
     <None Include="src\766. Toeplitz Matrix.md" />
     <None Include="src\345. Reverse Vowels of a String.md" />
     <None Include="src\1323. Maximum 69 Number.md" />
+    <None Include="src\1544. Make The String Great.md" />
   </ItemGroup>
 </Project>
