--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -42,6 +42,7 @@
     <None Include="src\653. Two Sum IV - Input is a BST.md" />
     <None Include="src\692. Top K Frequent Words.md" />
     <None Include="src\766. Toeplitz Matrix.md" />
+    <None Include="src\901. Online Stock Span.md" />
     <None Include="src\976. Largest Perimeter Triangle.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
