--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -49,5 +49,6 @@
     <None Include="src\345. Reverse Vowels of a String.md" />
     <None Include="src\1323. Maximum 69 Number.md" />
     <None Include="src\1544. Make The String Great.md" />
+    <None Include="src\901. Online Stock Span.md" />
   </ItemGroup>
 </Project>
