--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -50,5 +50,6 @@
     <None Include="src\1323. Maximum 69 Number.md" />
     <None Include="src\1544. Make The String Great.md" />
     <None Include="src\901. Online Stock Span.md" />
+    <None Include="src\1047. Remove All Adjacent Duplicates In String.md" />
   </ItemGroup>
 </Project>
