--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -51,5 +51,6 @@
     <None Include="src\1544. Make The String Great.md" />
     <None Include="src\901. Online Stock Span.md" />
     <None Include="src\1047. Remove All Adjacent Duplicates In String.md" />
+    <None Include="src\26. Remove Duplicates from Sorted Array.md" />
   </ItemGroup>
 </Project>
