--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -25,6 +25,7 @@
     <None Include="src\112. Path Sum.md" />
     <None Include="src\12. Integer to Roman.md" />
     <None Include="src\1323. Maximum 69 Number.md" />
+    <None Include="src\151. Reverse Words in a String.md" />
     <None Include="src\1544. Make The String Great.md" />
     <None Include="src\1832. Check if the Sentence Is Pangram.md" />
     <None Include="src\19. Remove Nth Node From End of List.md" />
