--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -31,5 +31,7 @@
     <None Include="src\901. Online Stock Span.md" />
     <None Include="src\976. Largest Perimeter Triangle.md" />
     <None Include="src\374. Guess Number Higher or Lower.md" />
+    <None Include="src\836. Rectangle OverlapSource.md" />
+    <None Include="src\223. Rectangle Area.md" />
   </ItemGroup>
 </Project>
