--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -39,6 +39,7 @@
     <None Include="src\231. Power of Two.md" />
     <None Include="src\237. Delete Node in a Linked List.md" />
     <None Include="src\26. Remove Duplicates from Sorted Array.md" />
+    <None Include="src\263. Ugly Number.md" />
     <None Include="src\3. Longest Substring Without Repeating Characters.md" />
     <None Include="src\334. Increasing Triplet Subsequence.md" />
     <None Include="src\345. Reverse Vowels of a String.md" />
