--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -33,5 +33,6 @@
     <None Include="src\374. Guess Number Higher or Lower.md" />
     <None Include="src\836. Rectangle OverlapSource.md" />
     <None Include="src\223. Rectangle Area.md" />
+    <None Include="src\263. Ugly Number.md" />
   </ItemGroup>
 </Project>
