--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -34,5 +34,6 @@
     <None Include="src\836. Rectangle OverlapSource.md" />
     <None Include="src\223. Rectangle Area.md" />
     <None Include="src\263. Ugly Number.md" />
+    <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
   </ItemGroup>
 </Project>
