--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -35,5 +35,6 @@
     <None Include="src\223. Rectangle Area.md" />
     <None Include="src\263. Ugly Number.md" />
     <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
+    <None Include="src\4. Median of Two Sorted Arrays.md" />
   </ItemGroup>
 </Project>
