--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -36,5 +36,6 @@
     <None Include="src\263. Ugly Number.md" />
     <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
     <None Include="src\4. Median of Two Sorted Arrays.md" />
+    <None Include="src\1926. Nearest Exit from Entrance in Maze.md" />
   </ItemGroup>
 </Project>
