--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -44,6 +44,7 @@
     <None Include="src\3. Longest Substring Without Repeating Characters.md" />
     <None Include="src\334. Increasing Triplet Subsequence.md" />
     <None Include="src\345. Reverse Vowels of a String.md" />
+    <None Include="src\36. Valid Sudoku.md" />
     <None Include="src\374. Guess Number Higher or Lower.md" />
     <None Include="src\38. Count and Say.md" />
     <None Include="src\4. Median of Two Sorted Arrays.md" />
