--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -37,5 +37,6 @@
     <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
     <None Include="src\4. Median of Two Sorted Arrays.md" />
     <None Include="src\1926. Nearest Exit from Entrance in Maze.md" />
+    <None Include="src\36. Valid Sudoku.md" />
   </ItemGroup>
 </Project>
