--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -52,6 +52,7 @@
     <None Include="src\653. Two Sum IV - Input is a BST.md" />
     <None Include="src\692. Top K Frequent Words.md" />
     <None Include="src\766. Toeplitz Matrix.md" />
+    <None Include="src\79. Word Search.md" />
     <None Include="src\836. Rectangle OverlapSource.md" />
     <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
     <None Include="src\901. Online Stock Span.md" />
