--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -36,6 +36,7 @@
     <None Include="src\208. Implement Trie (Prefix Tree).md" />
     <None Include="src\2095. Delete the Middle Node of a Linked List.md" />
     <None Include="src\21. Merge Two Sorted Lists.md" />
+    <None Include="src\212. Word Search II.md" />
     <None Include="src\222. Count Complete Tree Nodes.md" />
     <None Include="src\223. Rectangle Area.md" />
     <None Include="src\231. Power of Two.md" />
