--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -40,5 +40,6 @@
     <None Include="src\36. Valid Sudoku.md" />
     <None Include="src\79. Word Search.md" />
     <None Include="src\208. Implement Trie (Prefix Tree).md" />
+    <None Include="src\212. Word Search II.md" />
   </ItemGroup>
 </Project>
