--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -38,6 +38,7 @@
     <None Include="src\21. Merge Two Sorted Lists.md" />
     <None Include="src\212. Word Search II.md" />
     <None Include="src\222. Count Complete Tree Nodes.md" />
+    <None Include="src\2225. Find Players With Zero or One Losses.md" />
     <None Include="src\223. Rectangle Area.md" />
     <None Include="src\231. Power of Two.md" />
     <None Include="src\237. Delete Node in a Linked List.md" />
