--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -41,5 +41,6 @@
     <None Include="src\79. Word Search.md" />
     <None Include="src\208. Implement Trie (Prefix Tree).md" />
     <None Include="src\212. Word Search II.md" />
+    <None Include="src\2225. Find Players With Zero or One Losses.md" />
   </ItemGroup>
 </Project>
