--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -50,6 +50,7 @@
     <None Include="src\36. Valid Sudoku.md" />
     <None Include="src\374. Guess Number Higher or Lower.md" />
     <None Include="src\38. Count and Say.md" />
+    <None Include="src\380. Insert Delete GetRandom O(1).md" />
     <None Include="src\4. Median of Two Sorted Arrays.md" />
     <None Include="src\623. Add One Row to Tree.md" />
     <None Include="src\653. Two Sum IV - Input is a BST.md" />
