1207. Unique Number of Occurrences

--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -24,6 +24,7 @@
     <None Include="src\11. Container With Most Water.md" />
     <None Include="src\112. Path Sum.md" />
     <None Include="src\12. Integer to Roman.md" />
+    <None Include="src\1207. Unique Number of Occurrences.md" />
     <None Include="src\1323. Maximum 69 Number.md" />
     <None Include="src\151. Reverse Words in a String.md" />
     <None Include="src\1544. Make The String Great.md" />
