--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -43,5 +43,6 @@
     <None Include="src\212. Word Search II.md" />
     <None Include="src\2225. Find Players With Zero or One Losses.md" />
     <None Include="src\380. Insert Delete GetRandom O(1).md" />
+    <None Include="src\1207. Unique Number of Occurrences.md" />
   </ItemGroup>
 </Project>
