--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -62,6 +62,7 @@
     <None Include="src\79. Word Search.md" />
     <None Include="src\836. Rectangle OverlapSource.md" />
     <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
+    <None Include="src\876. Middle of the Linked List.md" />
     <None Include="src\901. Online Stock Span.md" />
     <None Include="src\976. Largest Perimeter Triangle.md" />
   </ItemGroup>
