--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -46,5 +46,6 @@
     <None Include="src\1207. Unique Number of Occurrences.md" />
     <None Include="src\1704. Determine if String Halves Are Alike.md" />
     <None Include="src\1657. Determine if Two Strings Are Close.md" />
+    <None Include="src\876. Middle of the Linked List.md" />
   </ItemGroup>
 </Project>
