--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -48,6 +48,7 @@
     <None Include="src\26. Remove Duplicates from Sorted Array.md" />
     <None Include="src\263. Ugly Number.md" />
     <None Include="src\3. Longest Substring Without Repeating Characters.md" />
+    <None Include="src\328. Odd Even Linked List.md" />
     <None Include="src\334. Increasing Triplet Subsequence.md" />
     <None Include="src\345. Reverse Vowels of a String.md" />
     <None Include="src\36. Valid Sudoku.md" />
