--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -47,5 +47,6 @@
     <None Include="src\1704. Determine if String Halves Are Alike.md" />
     <None Include="src\1657. Determine if Two Strings Are Close.md" />
     <None Include="src\876. Middle of the Linked List.md" />
+    <None Include="src\328. Odd Even Linked List.md" />
   </ItemGroup>
 </Project>
