--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -63,8 +63,10 @@
     <None Include="src\79. Word Search.md" />
     <None Include="src\836. Rectangle OverlapSource.md" />
     <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
+    <None Include="src\872. Leaf-Similar Trees.md" />
     <None Include="src\876. Middle of the Linked List.md" />
     <None Include="src\901. Online Stock Span.md" />
+    <None Include="src\938. Range Sum of BST.md" />
     <None Include="src\976. Largest Perimeter Triangle.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
