--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -50,5 +50,6 @@
     <None Include="src\328. Odd Even Linked List.md" />
     <None Include="src\938. Range Sum of BST.md" />
     <None Include="src\872. Leaf-Similar Trees.md" />
+    <None Include="src\1026. Maximum Difference Between Node and Ancestor.md" />
   </ItemGroup>
 </Project>
