--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -67,6 +67,7 @@
     <None Include="src\766. Toeplitz Matrix.md" />
     <None Include="src\79. Word Search.md" />
     <None Include="src\836. Rectangle OverlapSource.md" />
+    <None Include="src\841. Keys and Rooms.md" />
     <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
     <None Include="src\872. Leaf-Similar Trees.md" />
     <None Include="src\876. Middle of the Linked List.md" />
