--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -66,6 +66,7 @@
     <None Include="src\70. Climbing Stairs.md" />
     <None Include="src\766. Toeplitz Matrix.md" />
     <None Include="src\79. Word Search.md" />
+    <None Include="src\797. All Paths From Source to Target.md" />
     <None Include="src\836. Rectangle OverlapSource.md" />
     <None Include="src\841. Keys and Rooms.md" />
     <None Include="src\863. All Nodes Distance K in Binary Tree.md" />
