--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -57,5 +57,6 @@
     <None Include="src\232. Implement Queue using Stacks.md" />
     <None Include="src\1971. Find if Path Exists in Graph.md" />
     <None Include="src\841. Keys and Rooms.md" />
+    <None Include="src\797. All Paths From Source to Target.md" />
   </ItemGroup>
 </Project>
