--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -27,6 +27,7 @@
     <None Include="src\12. Integer to Roman.md" />
     <None Include="src\1207. Unique Number of Occurrences.md" />
     <None Include="src\1323. Maximum 69 Number.md" />
+    <None Include="src\144. Binary Tree Preorder Traversal.md" />
     <None Include="src\151. Reverse Words in a String.md" />
     <None Include="src\1544. Make The String Great.md" />
     <None Include="src\1657. Determine if Two Strings Are Close.md" />
