--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -60,5 +60,6 @@
     <None Include="src\1833. Maximum Ice Cream Bars.md" />
     <None Include="src\797. All Paths From Source to Target.md" />
     <None Include="src\144. Binary Tree Preorder Traversal.md" />
+    <None Include="src\100. Same Tree.md" />
   </ItemGroup>
 </Project>
