--- a/LeetCode/LeetCode.vcxproj
+++ b/LeetCode/LeetCode.vcxproj
@@ -30,6 +30,7 @@
     <None Include="src\1323. Maximum 69 Number.md" />
     <None Include="src\144. Binary Tree Preorder Traversal.md" />
     <None Include="src\151. Reverse Words in a String.md" />
+    <None Include="src\1523. Count Odd Numbers in an Interval Range.md" />
     <None Include="src\1544. Make The String Great.md" />
     <None Include="src\1657. Determine if Two Strings Are Close.md" />
     <None Include="src\1704. Determine if String Halves Are Alike.md" />
