--- a/LeetCode/LeetCode.vcxproj.filters
+++ b/LeetCode/LeetCode.vcxproj.filters
@@ -62,5 +62,6 @@
     <None Include="src\144. Binary Tree Preorder Traversal.md" />
     <None Include="src\100. Same Tree.md" />
     <None Include="src\918. Maximum Sum Circular Subarray.md" />
+    <None Include="src\1523. Count Odd Numbers in an Interval Range.md" />
   </ItemGroup>
 </Project>
